turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: ')' expected but integer literal found.
    droite(1./7.)
              ^